- Backend merged with Front End - Optimized methods - Code cleanup

--- a/spring-boot/admin/src/main/resources/messages.properties
+++ b/spring-boot/admin/src/main/resources/messages.properties
@@ -110,9 +110,10 @@ admin.proxies.edit.form.error.msg.updateProxyRefreshError=The update was success
 admin.proxies.edit.form.error.msg.updateProxyRefreshError.heading=Warning: Proxy could not be reached
 admin.proxies.edit.form.error.msg.updateProxyRefreshError.button.publicurl=Let me check the current public URL
 admin.proxies.edit.form.error.msg.updateProxyRefreshError.button.restartgateway=Okay, I will restart the Gateway
+admin.proxies.edit.form.label.sensitiveHeaders=Forwarding Sensitive Headers
+admin.proxies.edit.form.label.sensitiveHeaders.explanation=By default the CoatRack Gateway does not forward these headers. Please activate if you need it.
 
 # Reports
-
 admin.reports.details.page.title=Service API Usage Reports
 
 # service api
